--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -31,6 +31,10 @@ html input[type="button"][disabled], button[disabled], .btn[disabled]
 .no-padding
   padding 0 !important
 
+.space-between
+  margin-top 15px
+  margin-bottom 15px
+
 .sweet-alert p
   font-weight 400
 
@@ -149,6 +153,8 @@ md-input-container
 /* ------ TEMP DASHBOARD STYLE ----- */
 .temp-dashboard
   padding 50px 0
+  .search-bar
+    margin-bottom 20px
   .items-dashboard
     border 1px solid #eee
     padding 25px 0 15px
