--- a/app/templates/auth/recovery-password.html
+++ b/app/templates/auth/recovery-password.html
@@ -1,65 +1,67 @@
-<section id="content-area">
+<section id="login" class="content-area">
     <div class="container">
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3" ng-if="Recovery.recovery">
-            <uib-tabset active="activeJustified" justified="true">
-                <uib-tab index="0" heading="Recuperar contraseña">
-                    <form class="padding" name="recoveryForm" novalidate ng-submit="Recovery.recoveryPassword()">
-                        <div class="form-group" ng-class="{ 'has-error': recoveryForm.email.$touched && recoveryForm.email.$invalid }">
-                            <input type="email" ng-model="Recovery.formData.email" class="form-control" id="email" name="email"
-                                    placeholder="Correo electrónico" required>
-                            <div class="help-block" ng-messages="recoveryForm.email.$error" ng-if="recoveryForm.email.$touched">
-                                <div ng-message="required">Ingrese su correo electrónico</div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3" ng-if="Recovery.recovery">
+                <uib-tabset active="activeJustified" justified="true">
+                    <uib-tab index="0" heading="Recuperar contraseña">
+                        <form class="padding" name="recoveryForm" novalidate ng-submit="Recovery.recoveryPassword()">
+                            <div class="form-group" ng-class="{ 'has-error': recoveryForm.email.$touched && recoveryForm.email.$invalid }">
+                                <input type="email" ng-model="Recovery.formData.email" class="form-control" id="email" name="email"
+                                       placeholder="Correo electrónico" required>
+                                <div class="help-block" ng-messages="recoveryForm.email.$error" ng-if="recoveryForm.email.$touched">
+                                    <div ng-message="required">Ingrese su correo electrónico</div>
+                                </div>
                             </div>
-                        </div>
 
-                        <p class="text-center forgot-pass">Le enviaremos un correo electrónico con las instrucciones,
-                            para recuperar su contraseña.</p>
+                            <p class="text-center forgot-pass">Le enviaremos un correo electrónico con las instrucciones,
+                                para recuperar su contraseña.</p>
 
-                        <div class="text-center" style="padding-top: 40px;">
-                            <button type="submit" class="btn btn-yellow1" ng-disabled="recoveryForm.$invalid">
+                            <div class="text-center" style="padding-top: 40px;">
+                                <button type="submit" class="btn btn-danger" ng-disabled="recoveryForm.$invalid">
                                     Recuperar contraseña <span ng-if="Recovery.busy"><i
-                                    class="fa fa-spinner fa-spin"></i></span>
-                            </button>
-                        </div>
-                    </form>
-                </uib-tab>
-            </uib-tabset>
-        </div>
-
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3" ng-if="!Recovery.recovery">
-            <uib-tabset active="activeJustified" justified="true">
-                <uib-tab index="0" heading="Restablecer contraseña">
-                    <form class="padding" name="Form" novalidate ng-submit="Recovery.setPassword()">
-                        <div class="form-group" ng-class="{ 'has-error': Form.password.$touched && Form.password.$invalid }">
-                            <input type="password" ng-model="Recovery.formData.password" class="form-control" id="password" name="password"
-                                   placeholder="Nueva contraseña" required="Recovery.formData.password2">
-                            <div class="help-block" ng-messages="Form.password.$error" ng-if="Form.password.$touched">
-                                <div ng-message="required">Ingrese su nueva contraseña</div>
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
                             </div>
-                        </div>
+                        </form>
+                    </uib-tab>
+                </uib-tabset>
+            </div>
 
-                        <div class="form-group" ng-class="{ 'has-error': Form.password2.$touched && Form.password2.$invalid }">
-                            <input type="password" ng-model="Recovery.formData.password2" class="form-control" id="password2" name="password2"
-                                   placeholder="Confirmar contraseña"
-                                   compare-to="Recovery.formData.password" ng-required="Recovery.formData.password">
-                            <div class="help-block" ng-messages="Form.password2.$error" ng-if="Form.password2.$touched">
-                                <div ng-message="required">Confirmar contraseña.</div>
-                                <div ng-message="compareTo">Las contraseñas no coinciden.</div>
+            <div class="col-md-6 offset-md-3" ng-if="!Recovery.recovery">
+                <uib-tabset active="activeJustified" justified="true">
+                    <uib-tab index="0" heading="Restablecer contraseña">
+                        <form class="padding" name="Form" novalidate ng-submit="Recovery.setPassword()">
+                            <div class="form-group" ng-class="{ 'has-error': Form.password.$touched && Form.password.$invalid }">
+                                <input type="password" ng-model="Recovery.formData.password" class="form-control" id="password" name="password"
+                                       placeholder="Nueva contraseña" required="Recovery.formData.password2">
+                                <div class="help-block" ng-messages="Form.password.$error" ng-if="Form.password.$touched">
+                                    <div ng-message="required">Ingrese su nueva contraseña</div>
+                                </div>
                             </div>
-                        </div>
 
-                        <!--<p class="text-center forgot-pass">Le enviaremos un correo electrónico con las instrucciones,
-                            para recuperar su contraseña.</p>-->
+                            <div class="form-group" ng-class="{ 'has-error': Form.password2.$touched && Form.password2.$invalid }">
+                                <input type="password" ng-model="Recovery.formData.password2" class="form-control" id="password2" name="password2"
+                                       placeholder="Confirmar contraseña"
+                                       compare-to="Recovery.formData.password" ng-required="Recovery.formData.password">
+                                <div class="help-block" ng-messages="Form.password2.$error" ng-if="Form.password2.$touched">
+                                    <div ng-message="required">Confirmar contraseña.</div>
+                                    <div ng-message="compareTo">Las contraseñas no coinciden.</div>
+                                </div>
+                            </div>
 
-                        <div class="text-center" style="padding-top: 40px;">
-                            <button type="submit" class="btn btn-yellow1" ng-disabled="Form.$invalid">
-                                Reestablecer contraseña <span ng-if="Recovery.busy"><i
-                                    class="fa fa-spinner fa-spin"></i></span>
-                            </button>
-                        </div>
-                    </form>
-                </uib-tab>
-            </uib-tabset>
+                            <!--<p class="text-center forgot-pass">Le enviaremos un correo electrónico con las instrucciones,
+                                para recuperar su contraseña.</p>-->
+
+                            <div class="text-center" style="padding-top: 40px;">
+                                <button type="submit" class="btn btn-danger" ng-disabled="Form.$invalid">
+                                    Reestablecer contraseña <span ng-if="Recovery.busy"><i
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
+                            </div>
+                        </form>
+                    </uib-tab>
+                </uib-tabset>
+            </div>
         </div>
     </div>
 </section>
