--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -25,6 +25,138 @@
             <div class="row">
                 <!--/-->
                 <div class="col-md-6">
+
+                    <label>¿Vas a requerir factura para esta compra?</label>
+                    <md-radio-group layout="row" ng-model="Payment.isInvoiced">
+                        <md-radio-button value="0" class="md-primary">No</md-radio-button>
+                        <md-radio-button value="1">Si</md-radio-button>
+                    </md-radio-group>
+                    <form name="form">
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <input type="text" ng-model="Payment.customer.businessName"
+                                       id="businessName" name="businessName"
+                                       placeholder="Razon Social" required>
+                                <div class="help-block" ng-messages="form.businessName.$error"
+                                     ng-if="form.businessName.$touched">
+                                    <div class="text-danger" ng-message="required">El campo nombre es
+                                        requerido
+                                    </div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <input type="text" ng-model="Payment.customer.rfc"
+                                       id="rfc" name="rfc"
+                                       placeholder="RFC" required>
+                                <div class="help-block" ng-messages="form.rfc.$error"
+                                     ng-if="form.rfc.$touched">
+                                    <div class="text-danger" ng-message="required">El campo nombre es
+                                        requerido
+                                    </div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <label>Correo electrónico para envio de facturas</label>
+                                <input type="email" ng-model="Payment.customer.email"
+                                       id="email" name="email"
+                                       required>
+                                <div class="help-block" ng-messages="form.email.$error"
+                                     ng-if="registerForm.email.$touched">
+                                    <div class="text-danger" ng-message="required">Este campo es requerido.
+                                    </div>
+                                    <div class="text-danger" ng-message="email">Correo electrónico no válido.
+                                    </div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <label>Estado</label>
+                                <md-select ng-model="Payment.state" md-on-open="Payment.getStates()"
+                                           data-md-container-class="selectdemoSelectHeader"
+                                           md-on-close="searchState='';Payment.clearCities()" name="state"
+                                           required>
+                                    <md-select-header class="demo-select-header">
+                                        <input ng-model="searchState" type="search"
+                                               placeholder="Busca un estado..."
+                                               class="demo-header-searchbox md-text"
+                                               ng-keydown="$event.stopPropagation()">
+                                    </md-select-header>
+                                    <div layout="row" layout-align="center center"
+                                         ng-if="Payment.busyState">
+                                        <md-progress-circular md-mode="indeterminate"
+                                                              class="md-warn md-default-theme"
+                                                              style="transform: scale(1);"></md-progress-circular>
+                                    </div>
+                                    <md-option ng-repeat="state in Payment.states | filter:searchState"
+                                               ng-value="state">
+                                        {{state.name}}
+                                    </md-option>
+                                </md-select>
+                                <div class="errors" ng-messages="form.state.$error">
+                                    <div ng-message="required">Requerido</div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <label>Ciudad</label>
+                                <md-select ng-model="Payment.city" md-on-open="Payment.getCitiesByState()"
+                                           data-md-container-class="selectdemoSelectHeader"
+                                           md-on-close="searchCity=''"
+                                           ng-disabled="Payment.disableCity" name="city" required>
+                                    <md-select-header class="demo-select-header">
+                                        <input ng-model="searchCity" type="search"
+                                               placeholder="Busca una ciudad de {{Profile.state.name}}"
+                                               class="demo-header-searchbox md-text"
+                                               ng-keydown="$event.stopPropagation()">
+                                    </md-select-header>
+                                    <div layout="row" layout-align="center center" ng-if="Payment.busyCity">
+                                        <md-progress-circular md-mode="indeterminate"
+                                                              class="md-warn md-default-theme"
+                                                              style="transform: scale(1);"></md-progress-circular>
+                                    </div>
+                                    <md-option ng-repeat="city in Payment.cities | filter:searchCity"
+                                               ng-value="city">
+                                        {{city.name}}
+                                    </md-option>
+                                </md-select>
+                                <div class="errors" ng-messages="Payment.form.city.$error">
+                                    <div ng-message="required">Requerido</div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="col-md-12" ng-if="Payment.isInvoiced==='1'">
+                            <md-input-container>
+                                <input type="text" ng-model="Payment.customer.metadata.location"
+                                       id="location" name="location"
+                                       placeholder="Localidad" required>
+                                <div class="help-block" ng-messages="form.location.$error"
+                                     ng-if="form.location.$touched">
+                                    <div class="text-danger" ng-message="required">El campo nombre es
+                                        requerido
+                                    </div>
+                                </div>
+                            </md-input-container>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-right" style="padding-top: 10px;">
+                                <button type="button" class="btn btn-danger"
+                                        ng-disabled="Payment.busy || form.$invalid" ng-click="Payment.updateCustomer()">
+                                    Guardar cambios <span ng-if="Payment.busy"><i
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
+                            </div>
+
+                        </div>
+
+                    </form>
+
+
                     <ng-include src="'/templates/shop/partials/cart-details.html'"></ng-include>
                 </div>
                 <div class="col-md-6">
@@ -34,10 +166,11 @@
                         <md-radio-button value="8" class="md-primary" ng-click="Payment.creditCard=!Payment.creditCard">
                             Tarjeta
                         </md-radio-button>
-                        <md-radio-button value="3" ng-click="Payment.paypal=!Payment.paypal" class="md-primary"> 
+                        <md-radio-button value="3" ng-click="Payment.paypal=!Payment.paypal" class="md-primary">
                             Pago con paypal
                         </md-radio-button>
-                        <md-radio-button value="6" ng-click="Payment.depositBank=!Payment.depositBank" class="md-primary">
+                        <md-radio-button value="6" ng-click="Payment.depositBank=!Payment.depositBank"
+                                         class="md-primary">
                             Depósito bancario
                         </md-radio-button>
                     </md-radio-group>
@@ -50,32 +183,44 @@
                                     <div class="col-xs-12">
                                         <md-input-container md-no-float class="md-block">
                                             <label>Nombre completo</label>
-                                            <input type="text" ng-model="Payment.params.name"  id="cardholderName"  data-checkout="cardholderName" required>
+                                            <input type="text" ng-model="Payment.params.name" id="cardholderName"
+                                                   data-checkout="cardholderName" required>
                                         </md-input-container>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <md-input-container md-no-float class="md-block">
                                                 <label>Número de tarjeta</label>
-                                                <input type="text" ng-pattern="/^[0-9]*$/" md-maxlength="18" id="cardNumber" data-checkout="cardNumber" ng-model="Payment.params.cardNumber" required>
+                                                <input type="text" ng-pattern="/^[0-9]*$/" md-maxlength="18"
+                                                       id="cardNumber" data-checkout="cardNumber"
+                                                       ng-model="Payment.params.cardNumber" required>
                                             </md-input-container>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-md-6">
-                                                        <md-input-container md-no-float class="md-block" >
+                                                        <md-input-container md-no-float class="md-block">
                                                             <label>Mes</label>
-                                                            <input type="text" md-maxlength="2" ng-pattern="/^[0-9]*$/" ng-model="Payment.params.month" id="cardExpirationMonth" data-checkout="cardExpirationMonth" required>
-                                                            <div class="help-block" ng-messages="Form.cardExpiryM.$error" ng-if="Form.cardExpiryM.$touched">
+                                                            <input type="text" md-maxlength="2" ng-pattern="/^[0-9]*$/"
+                                                                   ng-model="Payment.params.month"
+                                                                   id="cardExpirationMonth"
+                                                                   data-checkout="cardExpirationMonth" required>
+                                                            <div class="help-block"
+                                                                 ng-messages="Form.cardExpiryM.$error"
+                                                                 ng-if="Form.cardExpiryM.$touched">
                                                                 <span> Mes expiración</span>
                                                             </div>
                                                         </md-input-container>
                                                     </div>
                                                     <div class="col-md-6">
-                                                        <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
+                                                        <md-input-container md-no-float class="md-block"
+                                                                            ng-class="{ 'has-error': Form.cardExpiryY.$touched && Form.cardExpiryY.$invalid }">
                                                             <label>Año</label>
-                                                            <input type="text" md-maxlength="4" ng-pattern="/^[0-9]*$/" ng-model="Payment.params.year" id="cardExpirationYear" data-checkout="cardExpirationYear" required>
+                                                            <input type="text" md-maxlength="4" ng-pattern="/^[0-9]*$/"
+                                                                   ng-model="Payment.params.year"
+                                                                   id="cardExpirationYear"
+                                                                   data-checkout="cardExpirationYear" required>
                                                         </md-input-container>
                                                     </div>
                                                 </div>
@@ -85,12 +230,16 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-md-6">
-                                            <md-input-container md-no-float class="md-block" ng-class="{ 'has-error': Form.cardCVC.$touched && Form.cardCVC.$invalid }">
+                                            <md-input-container md-no-float class="md-block"
+                                                                ng-class="{ 'has-error': Form.cardCVC.$touched && Form.cardCVC.$invalid }">
                                                 <label>CVC</label>
-                                                <input type="text" md-maxlength="3" ng-pattern="/^[0-9]*$/" ng-minlength="3" id="securityCode" data-checkout="securityCode" ng-model="Payment.params.cvc" required>
+                                                <input type="text" md-maxlength="3" ng-pattern="/^[0-9]*$/"
+                                                       ng-minlength="3" id="securityCode" data-checkout="securityCode"
+                                                       ng-model="Payment.params.cvc" required>
                                             </md-input-container>
                                         </div>
-                                        <input type="hidden" id="paymentMethodId" data-checkout="paymentMethodId" ng-model="Payment.params.paymentMethodId" />
+                                        <input type="hidden" id="paymentMethodId" data-checkout="paymentMethodId"
+                                               ng-model="Payment.params.paymentMethodId"/>
                                         <div class="col-xs-12 col-md-6 text-right">
                                             <div style="margin-top: 30px;">
                                                 <img class="img-fluid"
@@ -101,9 +250,13 @@
                                     <div class="container">
                                         <div class="row justify-content-md-end">
                                             <div class="">
-                                                <button ui-sref="shipping-address" class="btn btn-outline-default">Volver a dirección de envío</button>
-                                                <button ng-disabled="Form.$invalid || Payment.creditCard" class="btn btn-danger" type="submit">
-                                                    Realizar Pago <span ng-show="Payment.creditCard"><i class="fa fa-spinner fa-spin"></i></span>
+                                                <button ui-sref="shipping-address" class="btn btn-outline-default">
+                                                    Volver a dirección de envío
+                                                </button>
+                                                <button ng-disabled="Form.$invalid || Payment.creditCard"
+                                                        class="btn btn-danger" type="submit">
+                                                    Realizar Pago <span ng-show="Payment.creditCard"><i
+                                                        class="fa fa-spinner fa-spin"></i></span>
                                                 </button>
                                             </div>
                                         </div>
